[gd_scene load_steps=11 format=2]

[ext_resource path="res://TitleScreen/Assets/Fade_In/FadeIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://VictoryScreen/Assets/Sprites/VictoryLogo.png" type="Texture" id=2]
[ext_resource path="res://VictoryScreen/Assets/Sprites/GoBackButton.png" type="Texture" id=3]
[ext_resource path="res://VictoryScreen/Assets/Sprites/RetryButton-hover.png" type="Texture" id=4]
[ext_resource path="res://VictoryScreen/Assets/Sprites/RetryButton.png" type="Texture" id=5]
[ext_resource path="res://VictoryScreen/Assets/Sprites/GoBackButton-hover.png" type="Texture" id=6]
[ext_resource path="res://VictoryScreen/Assets/Sprites/LevelsButton.png" type="Texture" id=7]
[ext_resource path="res://VictoryScreen/Assets/Sprites/LevelsButton-hover.png" type="Texture" id=8]
[ext_resource path="res://VictoryScreen/Assets/Scripts/VictoryScreen-Global.gd" type="Script" id=9]
[ext_resource path="res://TitleScreen/Assets/Fade_Out/FadeOut.tscn" type="PackedScene" id=10]

[node name="VictoryScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_top = 19.0
margin_right = 640.0
margin_bottom = 179.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 183.0
margin_right = 640.0
margin_bottom = 341.0
custom_constants/separation = 10
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 270.0
margin_right = 370.0
margin_bottom = 158.0
alignment = 1

[node name="RetryButton" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_right = 100.0
margin_bottom = 50.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )
stretch_mode = 3

[node name="LevelsButton" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 54.0
margin_right = 100.0
margin_bottom = 104.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )
stretch_mode = 3

[node name="GoBackButton" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 108.0
margin_right = 100.0
margin_bottom = 158.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )
stretch_mode = 3

[node name="FadeIn" parent="." instance=ExtResource( 1 )]
visible = false

[node name="FadeOut" parent="." instance=ExtResource( 10 )]
visible = false
[connection signal="pressed" from="Menu/CenterRow/Buttons/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/LevelsButton" to="." method="_on_LevelsButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="animation_finished" from="FadeOut" to="." method="_on_FadeOut_animation_finished"]
